# TillerProject

./: .clang-format  .clang-tidy  .gitignore  CMakeCache.txt  CMakeLists.txt  CMakePresets.json  Makefile  README.md  cmake_install.cmake  compile_commands.json  main.cpp
.cache/clangd/index/: angle_sensor_task.cpp.8D639D225A5591B2.idx  angle_sensor_task.hpp.1491D5A4BDF45B76.idx  combination_sensor.cpp.7055C32663EA1394.idx  combination_sensor.hpp.909FF776F5671CC1.idx  dummy_adc_driver.cpp.9E193F6C3269D99D.idx  dummy_adc_driver.hpp.E4C08F521D2B6B3F.idx  dummy_encoder_driver.cpp.C9C9F1310CEBF5A6.idx  dummy_encoder_driver.hpp.0314BD4D0865F8CA.idx  encoder_sensor.cpp.6B5B09620C381E55.idx  encoder_sensor.hpp.972FE6F1E2832FC1.idx  gmock-actions.h.4F5546EB93B82D67.idx  gmock-all.cc.991E20E62F314E4B.idx  gmock-cardinalities.cc.903D796FC6A7A707.idx  gmock-cardinalities.h.D5D81A385740F5A1.idx  gmock-function-mocker.h.A7DC57BA0ABB6AE8.idx  gmock-generated-actions.h.010406F2A627E953.idx  gmock-internal-utils.cc.506AA2068E3CC9C1.idx  gmock-internal-utils.h.F21853F9B863A065.idx  gmock-matchers.cc.1749C3E86BFFDC20.idx  gmock-matchers.h.693F9DFF2C9AC13F.idx  gmock-matchers.h.98BDB7483B9FDB50.idx  gmock-more-actions.h.24207F3DE644D0CE.idx  gmock-more-matchers.h.44FE9B2C981C39A4.idx  gmock-nice-strict.h.0E6984F1E560DDC1.idx  gmock-port.h.D3E5654ACCF1E16C.idx  gmock-port.h.FFFFFA425FD8E40F.idx  gmock-pp.h.63D8C056F2F16182.idx  gmock-spec-builders.cc.46EF8BA41C5F4FB1.idx  gmock-spec-builders.h.33AB256A3A06F49A.idx  gmock.cc.719A2E9987F2DC40.idx  gmock.h.2F7BA6DDE8185FE6.idx  gmock_adc_driver.hpp.F3EC7406EA908652.idx  gmock_main.cc.DD796D18693CB1CD.idx  gtest-all.cc.CF55BAB41A41C91F.idx  gtest-assertion-result.cc.6F5660F1A6083653.idx  gtest-assertion-result.h.18D27AFE7FBBDE4F.idx  gtest-death-test-internal.h.2960E7EFE206E1D1.idx  gtest-death-test.cc.017C9EFD2E3065DB.idx  gtest-death-test.h.145AF4A0FDAE3A25.idx  gtest-filepath.cc.9C696BE79CEF2D7E.idx  (+42 more)
include/abstracts/: i_adc_driver.hpp  i_angle_sensor.hpp  i_encoder_driver.hpp  i_resettable.hpp  i_task.hpp
include/drivers/: dummy_adc_driver.hpp  dummy_encoder_driver.hpp
include/params/: tiller_params.hpp
include/sensors/: combination_sensor.hpp  encoder_sensor.hpp  potentiometer_sensor.hpp
include/tta/: angle_sensor_task.hpp  scheduler.hpp
include/utilities/: linear_mapping.hpp  time.hpp
src/drivers/: dummy_adc_driver.cpp  dummy_encoder_driver.cpp
src/sensors/: combination_sensor.cpp  encoder_sensor.cpp  potentiometer_sensor.cpp
src/tta/: angle_sensor_task.cpp  scheduler.cpp
test/: CMakeLists.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake  tests[1]_include.cmake  tests[1]_tests.cmake
test/mocks/: gmock_adc_driver.hpp  gmock_angle_sensor.hpp  gmock_encoder_driver.hpp  gmock_task.hpp
test/sensors/: gtest_combination_sensor.cpp  gtest_encoder_sensor.cpp  gtest_potentiometer_sensor.cpp
test/tta/: gtest_scheduler.cpp
